Renamed columns for ease.

--- a/final_assignment/ML_final_assignment.ipynb
+++ b/final_assignment/ML_final_assignment.ipynb
@@ -67,9 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -91,32 +98,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>ind</th>\n",
-       "      <th>maxtp</th>\n",
-       "      <th>ind.1</th>\n",
-       "      <th>mintp</th>\n",
-       "      <th>igmin</th>\n",
-       "      <th>gmin</th>\n",
-       "      <th>ind.2</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>cbl</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>INDICATOR0</th>\n",
+       "      <th>MAX_AIR_TEMP</th>\n",
+       "      <th>INDICATOR1</th>\n",
+       "      <th>MIN_AIR_TEMP</th>\n",
+       "      <th>I_GRASS_MIN_TEMP</th>\n",
+       "      <th>GRASS_MIN_TEMP</th>\n",
+       "      <th>INDICATOR2</th>\n",
+       "      <th>RAIN_MM</th>\n",
+       "      <th>MEAN_CBL_PRESSURE</th>\n",
        "      <th>...</th>\n",
-       "      <th>hg</th>\n",
-       "      <th>sun</th>\n",
-       "      <th>dos</th>\n",
-       "      <th>g_rad</th>\n",
-       "      <th>soil</th>\n",
-       "      <th>pe</th>\n",
-       "      <th>evap</th>\n",
-       "      <th>smd_wd</th>\n",
-       "      <th>smd_md</th>\n",
-       "      <th>smd_pd</th>\n",
+       "      <th>HIGHEST_GUST</th>\n",
+       "      <th>SUN_DURATION</th>\n",
+       "      <th>DOS</th>\n",
+       "      <th>GLOBAL_RADIATION</th>\n",
+       "      <th>SOIL_TEMP</th>\n",
+       "      <th>POTENTIAL_EVAPOTRANSPIRATION</th>\n",
+       "      <th>EVAPORATION</th>\n",
+       "      <th>SMD_WELL_DRAINED</th>\n",
+       "      <th>SMD_MODERATELY_DRAINED</th>\n",
+       "      <th>SMD_POORLY_DRAINED</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13814</th>\n",
+       "      <th>0</th>\n",
+       "      <td>date</td>\n",
+       "      <td>ind</td>\n",
+       "      <td>maxtp</td>\n",
+       "      <td>ind</td>\n",
+       "      <td>mintp</td>\n",
+       "      <td>igmin</td>\n",
+       "      <td>gmin</td>\n",
+       "      <td>ind</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>cbl</td>\n",
+       "      <td>...</td>\n",
+       "      <td>hg</td>\n",
+       "      <td>sun</td>\n",
+       "      <td>dos</td>\n",
+       "      <td>g_rad</td>\n",
+       "      <td>soil</td>\n",
+       "      <td>pe</td>\n",
+       "      <td>evap</td>\n",
+       "      <td>smd_wd</td>\n",
+       "      <td>smd_md</td>\n",
+       "      <td>smd_pd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13815</th>\n",
        "      <td>28-oct-1979</td>\n",
        "      <td>0</td>\n",
        "      <td>12.0</td>\n",
@@ -140,7 +171,7 @@
        "      <td>-0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13815</th>\n",
+       "      <th>13816</th>\n",
        "      <td>29-oct-1979</td>\n",
        "      <td>0</td>\n",
        "      <td>11.0</td>\n",
@@ -164,7 +195,7 @@
        "      <td>-0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13816</th>\n",
+       "      <th>13817</th>\n",
        "      <td>30-oct-1979</td>\n",
        "      <td>0</td>\n",
        "      <td>15.7</td>\n",
@@ -188,7 +219,7 @@
        "      <td>-4.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13817</th>\n",
+       "      <th>13818</th>\n",
        "      <td>31-oct-1979</td>\n",
        "      <td>0</td>\n",
        "      <td>12.6</td>\n",
@@ -210,30 +241,6 @@
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-3.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13818</th>\n",
-       "      <td>01-nov-1979</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1001.6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>585</td>\n",
-       "      <td>8.175</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>-2.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -260,7 +267,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28819</th>\n",
+       "      <th>28820</th>\n",
        "      <td>26-nov-2020</td>\n",
        "      <td>0</td>\n",
        "      <td>7.5</td>\n",
@@ -284,7 +291,7 @@
        "      <td>-8.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28820</th>\n",
+       "      <th>28821</th>\n",
        "      <td>27-nov-2020</td>\n",
        "      <td>0</td>\n",
        "      <td>7.9</td>\n",
@@ -308,7 +315,7 @@
        "      <td>-8.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28821</th>\n",
+       "      <th>28822</th>\n",
        "      <td>28-nov-2020</td>\n",
        "      <td>0</td>\n",
        "      <td>10.2</td>\n",
@@ -332,7 +339,7 @@
        "      <td>-7.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28822</th>\n",
+       "      <th>28823</th>\n",
        "      <td>29-nov-2020</td>\n",
        "      <td>0</td>\n",
        "      <td>10.8</td>\n",
@@ -356,7 +363,7 @@
        "      <td>-7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28823</th>\n",
+       "      <th>28824</th>\n",
        "      <td>30-nov-2020</td>\n",
        "      <td>0</td>\n",
        "      <td>10.2</td>\n",
@@ -381,48 +388,96 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15010 rows × 26 columns</p>\n",
+       "<p>15011 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date  ind  maxtp  ind.1  mintp  igmin  gmin  ind.2  rain  \\\n",
-       "13814  28-oct-1979    0   12.0      0    4.5      1  -1.9      0   0.9   \n",
-       "13815  29-oct-1979    0   11.0      0    4.0      0   2.7      0   0.7   \n",
-       "13816  30-oct-1979    0   15.7      0    8.8      0   7.4      0   4.8   \n",
-       "13817  31-oct-1979    0   12.6      0    7.1      0   5.3      0   0.5   \n",
-       "13818  01-nov-1979    0   11.4      0    5.5      0   4.0      2   0.0   \n",
-       "...            ...  ...    ...    ...    ...    ...   ...    ...   ...   \n",
-       "28819  26-nov-2020    0    7.5      0    1.3      0   1.1      3   0.0   \n",
-       "28820  27-nov-2020    0    7.9      1   -1.2      1  -5.5      0   0.2   \n",
-       "28821  28-nov-2020    0   10.2      0    0.6      1  -3.7      3   0.0   \n",
-       "28822  29-nov-2020    0   10.8      0    1.9      1  -0.8      3   0.0   \n",
-       "28823  30-nov-2020    0   10.2      0    2.8      0   7.1      0   0.7   \n",
+       "              DATE INDICATOR0 MAX_AIR_TEMP INDICATOR1 MIN_AIR_TEMP  \\\n",
+       "0             date        ind        maxtp        ind        mintp   \n",
+       "13815  28-oct-1979          0         12.0          0          4.5   \n",
+       "13816  29-oct-1979          0         11.0          0          4.0   \n",
+       "13817  30-oct-1979          0         15.7          0          8.8   \n",
+       "13818  31-oct-1979          0         12.6          0          7.1   \n",
+       "...            ...        ...          ...        ...          ...   \n",
+       "28820  26-nov-2020          0          7.5          0          1.3   \n",
+       "28821  27-nov-2020          0          7.9          1         -1.2   \n",
+       "28822  28-nov-2020          0         10.2          0          0.6   \n",
+       "28823  29-nov-2020          0         10.8          0          1.9   \n",
+       "28824  30-nov-2020          0         10.2          0          2.8   \n",
        "\n",
-       "          cbl  ...  hg  sun dos  g_rad    soil   pe evap  smd_wd smd_md smd_pd  \n",
-       "13814   997.9  ...  22  4.2   0    573   9.350  0.7  0.9     0.0   -0.2   -0.2  \n",
-       "13815   998.8  ...  17  0.4   0    417   8.625  0.6  0.8     0.0   -0.1   -0.3  \n",
-       "13816   990.8  ...  36  0.6   0    247  10.550  0.8  1.0     0.0   -4.0   -4.4  \n",
-       "13817   990.0  ...  37  6.7   0    577   9.875  1.0  1.2     0.5    0.5   -3.7  \n",
-       "13818  1001.6  ...  27  7.0   0    585   8.175  1.2  1.5     1.6    1.6   -2.3  \n",
-       "...       ...  ...  ..  ...  ..    ...     ...  ...  ...     ...    ...    ...  \n",
-       "28819  1011.1  ...  14  0.0   0    203   5.375  0.2  0.3     0.4    0.4   -8.6  \n",
-       "28820  1008.2  ...  12  4.7   0    345   4.975  0.1  0.2     0.3    0.3   -8.3  \n",
-       "28821  1008.3  ...  15  0.6   0    222   4.800  0.3  0.4     0.6    0.6   -7.6  \n",
-       "28822  1015.1  ...  14  1.9   0    198   6.650  0.2  0.3     0.8    0.8   -7.0  \n",
-       "28823  1015.2  ...  28  0.0   0     81   7.525  0.4  0.5     0.4    0.4   -7.0  \n",
+       "      I_GRASS_MIN_TEMP GRASS_MIN_TEMP INDICATOR2 RAIN_MM MEAN_CBL_PRESSURE  \\\n",
+       "0                igmin           gmin        ind    rain               cbl   \n",
+       "13815                1           -1.9          0     0.9             997.9   \n",
+       "13816                0            2.7          0     0.7             998.8   \n",
+       "13817                0            7.4          0     4.8             990.8   \n",
+       "13818                0            5.3          0     0.5             990.0   \n",
+       "...                ...            ...        ...     ...               ...   \n",
+       "28820                0            1.1          3     0.0            1011.1   \n",
+       "28821                1           -5.5          0     0.2            1008.2   \n",
+       "28822                1           -3.7          3     0.0            1008.3   \n",
+       "28823                1           -0.8          3     0.0            1015.1   \n",
+       "28824                0            7.1          0     0.7            1015.2   \n",
        "\n",
-       "[15010 rows x 26 columns]"
+       "       ... HIGHEST_GUST SUN_DURATION  DOS GLOBAL_RADIATION SOIL_TEMP  \\\n",
+       "0      ...           hg          sun  dos            g_rad      soil   \n",
+       "13815  ...           22          4.2    0              573     9.350   \n",
+       "13816  ...           17          0.4    0              417     8.625   \n",
+       "13817  ...           36          0.6    0              247    10.550   \n",
+       "13818  ...           37          6.7    0              577     9.875   \n",
+       "...    ...          ...          ...  ...              ...       ...   \n",
+       "28820  ...           14          0.0    0              203     5.375   \n",
+       "28821  ...           12          4.7    0              345     4.975   \n",
+       "28822  ...           15          0.6    0              222     4.800   \n",
+       "28823  ...           14          1.9    0              198     6.650   \n",
+       "28824  ...           28          0.0    0               81     7.525   \n",
+       "\n",
+       "      POTENTIAL_EVAPOTRANSPIRATION EVAPORATION SMD_WELL_DRAINED  \\\n",
+       "0                               pe        evap           smd_wd   \n",
+       "13815                          0.7         0.9              0.0   \n",
+       "13816                          0.6         0.8              0.0   \n",
+       "13817                          0.8         1.0              0.0   \n",
+       "13818                          1.0         1.2              0.5   \n",
+       "...                            ...         ...              ...   \n",
+       "28820                          0.2         0.3              0.4   \n",
+       "28821                          0.1         0.2              0.3   \n",
+       "28822                          0.3         0.4              0.6   \n",
+       "28823                          0.2         0.3              0.8   \n",
+       "28824                          0.4         0.5              0.4   \n",
+       "\n",
+       "      SMD_MODERATELY_DRAINED SMD_POORLY_DRAINED  \n",
+       "0                     smd_md             smd_pd  \n",
+       "13815                   -0.2               -0.2  \n",
+       "13816                   -0.1               -0.3  \n",
+       "13817                   -4.0               -4.4  \n",
+       "13818                    0.5               -3.7  \n",
+       "...                      ...                ...  \n",
+       "28820                    0.4               -8.6  \n",
+       "28821                    0.3               -8.3  \n",
+       "28822                    0.6               -7.6  \n",
+       "28823                    0.8               -7.0  \n",
+       "28824                    0.4               -7.0  \n",
+       "\n",
+       "[15011 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read_data = pd.read_csv(\"dly532.csv\")\n",
+    "names = [\"DATE\", \"INDICATOR0\",\"MAX_AIR_TEMP\",\n",
+    "           \"INDICATOR1\",\"MIN_AIR_TEMP\",\"I_GRASS_MIN_TEMP\",\n",
+    "           \"GRASS_MIN_TEMP\",\"INDICATOR2\",\"RAIN_MM\",\n",
+    "           \"MEAN_CBL_PRESSURE\",\"MEAN_WINDSPEED_KNOT\",\"INDICATOR3\",\n",
+    "           \"HIGHEST_10MIN_WINDSPEED\",\"INDICATOR4\",\"WIND_DIR_DEGREE\",\n",
+    "           \"INDICATOR5\",\"HIGHEST_GUST\",\"SUN_DURATION\",\"DOS\",\n",
+    "           \"GLOBAL_RADIATION\",\"SOIL_TEMP\",\"POTENTIAL_EVAPOTRANSPIRATION\",\n",
+    "           \"EVAPORATION\",\"SMD_WELL_DRAINED\",\"SMD_MODERATELY_DRAINED\",\"SMD_POORLY_DRAINED\"]\n",
+    "print(len(names))\n",
+    "read_data = pd.read_csv(\"dly532.csv\", names = names)\n",
     "read_data = read_data.replace(r'^\\s*$', np.nan, regex=True)\n",
-    "read_data = read_data[read_data[\"smd_pd\"].notna()]\n",
+    "read_data = read_data[read_data[\"SMD_POORLY_DRAINED\"].notna()]\n",
     "read_data"
    ]
   },
