--- a/final_assignment/ML_final_assignment.ipynb
+++ b/final_assignment/ML_final_assignment.ipynb
@@ -4,38 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: openpyxl in /Users/takshilbharadwaj/work_environments/gestures_env/lib/python3.7/site-packages (3.0.5)\n",
-      "Requirement already satisfied: jdcal in /Users/takshilbharadwaj/work_environments/gestures_env/lib/python3.7/site-packages (from openpyxl) (1.4.1)\n",
-      "Requirement already satisfied: et-xmlfile in /Users/takshilbharadwaj/work_environments/gestures_env/lib/python3.7/site-packages (from openpyxl) (1.0.1)\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.3.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install openpyxl "
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +463,7 @@
        "[28824 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +883,7 @@
        "[15010 rows x 26 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +939,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1258,7 @@
        "[15010 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1459,7 @@
        "28823              0.4                    0.4               -7.0           1.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1705,7 @@
        "28823           1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1926,7 @@
        "28823           1.0  2020     11   30  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2206,7 @@
        "max        1.000000   2020.000000     12.000000     31.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2237,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2580,7 @@
        "[15010 rows x 19 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2614,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2623,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2671,8 +2652,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data = np.column_stack((np.array(read_data[\"MAX_AIR_TEMP\"]),np.array(read_data[\"MIN_AIR_TEMP\"]),\n",
+    "                                 np.array(read_data[\"MEAN_CBL_PRESSURE\"]),np.array(read_data[\"MEAN_WINDSPEED_KNOT\"]),\n",
+    "                                 np.array(read_data[\"HIGHEST_10MIN_WINDSPEED\"]),np.array(read_data[\"WIND_DIR_DEGREE\"]),\n",
+    "                                 np.array(read_data[\"HIGHEST_GUST\"]),np.array(read_data[\"SUN_DURATION\"]),\n",
+    "                                 np.array(read_data[\"EVAPORATION\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INTERCEPT VALUE : 79.88494199149251\n",
+      "theta1 : 0.046240223886937326\n",
+      "theta2 : 0.02786861211649803\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/takshilbharadwaj/work_environments/gestures_env/lib/python3.7/site-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "logisticReg = LogisticRegression(penalty=\"l1\",max_iter = 200, solver = \"liblinear\") #max_iter alteration for different values\n",
+    "logisticReg.fit(training_data, target_Arr)\n",
+    "y_pred = logisticReg.predict(training_data)\n",
+    "intercept_value = logisticReg.intercept_\n",
+    "theta1 = logisticReg.coef_[0,0]\n",
+    "theta2 = logisticReg.coef_[0,1]\n",
+    "print(\"\\nINTERCEPT VALUE :\", intercept_value[0])\n",
+    "print(\"theta1 :\", theta1)\n",
+    "print(\"theta2 :\", theta2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7722185209860093\n"
+     ]
+    }
+   ],
+   "source": [
+    "logisticRegression_accuracy = accuracy_score(target_Arr,y_pred)\n",
+    "print(logisticRegression_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
