Added SVM Classifier

--- a/final_assignment/ML_final_assignment.ipynb
+++ b/final_assignment/ML_final_assignment.ipynb
@@ -2870,7 +2870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2886,9 +2886,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Intercept Value: [161.67995744]\n",
+      "The Theta values: [[ 0.0735399   0.08625664 -0.16372434 -0.19811348  0.12863027  0.00093313\n",
+      "   0.13581499 -0.27063385 -0.30146825]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The Intercept Value: \" + str(classifier.intercept_))\n",
     "\n",
@@ -2897,9 +2907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.7628247834776816\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import metrics\n",
     "print(\"Accuracy: \", metrics.accuracy_score(y_test, y_Pred))"
@@ -2907,9 +2925,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision:  0.7819575060954371\n",
+      "Recall:  0.8355042798660216\n"
+     ]
+    }
+   ],
    "source": [
     "# Model Precision: what percentage of positive tuples are labeled as such?\n",
     "print(\"Precision: \", metrics.precision_score(y_test, y_Pred))\n",
@@ -2927,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
